<resources>
    <string name="app_name">NDP Song</string>
    <string name="tv1">Song Title</string>
    <string name="et1">Enter song title here</string>
    <string name="tv2">Singers</string>
    <string name="et2">Enter singers name here</string>
    <string name="tv3">Year</string>
    <string name="et3">Enter year of release here</string>
    <string name="tv4">Stars</string>
    <string name="rb1">1</string>
    <string name="rb2">2</string>
    <string name="rb3">3</string>
    <string name="rb4">4</string>
    <string name="rb5">5</string>
    <string name="btn1">insert</string>
    <string name="btn2">show list</string>
    <string name="btn3">show all songs with 5 stars</string>
    <string name="tv5">Song ID</string>
    <string name="et4">Enter song ID here</string>
    <string name="btn4">update</string>
    <string name="btn5">delete</string>
    <string name="btn6">cancel</string>
</resources>